--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -4,36 +4,47 @@
 
 body {
 	width: 100%;
+
+}
+
+#root {
+	min-height: 750px;
+	height: 100%;
 }
 
 div {
 	border: 1px solid lightgrey;
-	margin: 10px auto;
+	margin: 10px;
 
 }
+
 .main {
-	width: 80%;
-	text-align: center;
+	width: 95%;
+	height: 100%;
+	min-height: 750px;
+	padding: 20px;
 }
 
-h1 {
+h1, h2, h3, h4 {
 	text-align: center;
-}
-
-h2, h3, h4 {
 	margin: 5px;
 }
 
-.score, .poster, .guess, .timer {
+.right, .poster {
 	width: 45%;
+	height: 60%;
+	padding: 5px;
+	float: left;
 }
 
-.poster {
-	height: 50%;
-	padding: 10px;
+.score, .guess, .timer {
+	width: 95%;
+	display: inline-block;
 }
 
 .poster>img {
+	max-width: 320px;
+	width: 100%;
 	display: block;
 	margin: 10px auto;
 }
