--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -4,6 +4,11 @@
 
 body {
 	width: 100%;
+	background-color: #000000;
+}
+
+.hidden {
+	display: none;
 }
 
 #root {
@@ -12,16 +17,27 @@ body {
 }
 
 div {
-	border: 1px solid lightgrey;
-	margin: 10px;
+	margin: 5px 10px;
+}
+
+.top {
+	width: 90%;
+	height: 75px;
+	padding: 10px;
+}
+
+.top>button {
+	margin: 10px auto;
 }
 
 .main {
 	width: 90%;
-	height: 100%;
-	min-height: 750px;
-	padding: 20px;
+	height: 85%;
+	min-height: 700px;
+	padding: 5px 20px;
 	padding-left: 3%;
+	margin-top: 2%;
+	background-color: #CD2626;
 }
 
 h1, h2, h3, h4 {
@@ -29,23 +45,38 @@ h1, h2, h3, h4 {
 	margin: 10px;
 }
 
+.title {
+	margin: 10px;
+	color: #FFD700;
+	text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.69);
+}
+
 .right, .poster {
 	height: 60%;
+	height: 538px;
 	padding: 5px;
 	float: left;
+	background-color: white;
 }
 
 .right {
-	width: 40%;
-	height: 584px;
+	width: 44%;
+	height: 538px;
 }
 
 .poster {
-	width: 45%;
+	width: 43%;
 }
 
-.score, .timer {
+.poster>h3 {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.score, .timer, .guess {
 	width: 95%;
+	margin: 0;
 	display: inline-block;
 }
 
@@ -64,12 +95,29 @@ h2.score-number {
 button {
 	display: block;
 	margin: auto;
+	font-weight: bolder;
+	cursor: pointer;
+	border: 0px;
 	width: 29%;
 	height: 35px;
+	background-color: #FFD700;
+}
+
+.top>button {
+	border-radius: 4px;
+	height: 40px;
+	box-shadow: 2px 2px 5px rgba(50, 50, 50, 0.99);
 }
 
 .guess {
-	padding: 15px;
+	padding: 9px 15px;
+}
+
+button.next {
+	width: 25%;
+	height: 30px;
+	padding: 3px;
+	border-radius: 5px;
 }
 
 form {
@@ -96,8 +144,18 @@ input:disabled {
 	font-style: italic;
 }
 
-.guess button {
+form>button {
 	width: 99%;
-	cursor: pointer;
+}
+
+.guess button:hover {
+	background-color: #FFFF00;
+}
+
+.top>button:hover {
+	padding-top: 5px;
+	color: white;
+	background-color: #EEC900;
+	box-shadow: inset 3px 3px 6px 0px rgba(50, 50, 50, 0.75);
 }
 
