--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -4,6 +4,7 @@
 
 body {
 	width: 100%;
+	height: 100%;
 	background-color: #000000;
 }
 
@@ -13,7 +14,7 @@ body {
 
 #root {
 	min-height: 750px;
-	height: 100%;
+
 }
 
 div {
@@ -32,7 +33,7 @@ div {
 
 .main {
 	width: 90%;
-	height: 85%;
+/*	height: 85%; */
 	min-height: 700px;
 	padding: 5px 20px;
 	padding-left: 3%;
@@ -87,7 +88,7 @@ h2.score-number {
 
 .poster>img {
 	max-width: 320px;
-	width: 100%;
+	width: 90%;
 	display: block;
 	margin: 10px auto;
 }
@@ -158,4 +159,72 @@ form>button {
 	color: white;
 	background-color: #EEC900;
 	box-shadow: inset 3px 3px 6px 0px rgba(50, 50, 50, 0.75);
+}
+
+.scrollbar {
+	display: none;
+	position: fixed;
+	height: 150px;
+	width: 40px;
+	right: 0px;
+	top: 38%;
+	padding: 4px;
+}
+
+.up, .down {
+	margin: 0px auto;
+	height: 45%;
+	width: 90%;
+	background-color: #FFD700;
+	user-select: none;
+}
+
+.down {
+	margin-top: 8px;
+}
+
+.up>img, .down>img {
+	margin: 80% auto;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 620px) {
+
+	h2, h3, h4, h2.score-number {
+		font-size: 18px;
+	}
+
+}
+
+@media only screen and (max-width: 480px) {
+
+	.main {
+		width: 100%;
+		height: 1075px;
+		padding-left: 15px;
+		margin: 0;
+		text-align: center;
+	}
+
+	.poster, .right {
+		width: 90%;
+	}
+
+	.right {
+		height: 415px;
+		padding-top: 15px;
+	}
+
+	h2, h3, h4 {
+		margin: 3px auto;
+	}
+
+	h2.score-number {
+		font-size: 25px;
+	}
+
+	.scrollbar {
+		display: block;
+	}
+
+
 }
