--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -31,7 +31,7 @@ div {
   margin: 5px 10px; }
 
 .top {
-  width: 90%;
+  width: 85%;
   height: 75px;
   padding: 10px; }
 
@@ -53,19 +53,19 @@ h1, h2, h3, h4 {
 
 .title {
   margin: 10px;
-  color: #FFD700;
+  color: white;
   text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.69); }
 
 .right, .poster {
-  border: 1px solid whitesmoke;
-  height: 60%;
-  height: 543px;
+  height: 550px;
+  margin: 0px;
   padding: 5px;
   float: left;
   background-color: white; }
 
 .right {
-  width: 44%; }
+  width: 44%;
+  padding: 15px 0px; }
 
 .poster {
   width: 45%; }
